test/arrays/bradc/slices/outOfBoundsSlice.good
outOfBoundsSlice.chpl:3: error: halt reached - array slice out of bounds in dimension 1: 11..12
